# Tismapps_kt

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/tismapps/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cvutils.cpp  cvutils.h  tismapps.cpp
app/src/main/java/com/example/tismapps/: MainActivity.kt  MainActivity_backup.kt  utils.kt
app/src/main/java/com/example/tismapps/ui/app/: AppScreens.kt  NavigationDrawer.kt  NavigationScreens.kt
app/src/main/java/com/example/tismapps/ui/camera/: CameraScreen.kt  CameraUiState.kt  CameraView.kt  CameraViewModel.kt
app/src/main/java/com/example/tismapps/ui/data/: DetectorViewModel.kt  DetectorViewModelPytorch.kt  DetectorViewModelTensorflow.kt  MenuItem.kt  imagenet_classes.kt
app/src/main/java/com/example/tismapps/ui/screens/: AppScreen.kt  HomeScreen.kt
app/src/main/java/com/example/tismapps/ui/screens/classifier/: ClassifierScreen.kt
app/src/main/java/com/example/tismapps/ui/screens/detector/: DetectorScreen.kt
app/src/main/java/com/example/tismapps/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/tismapps/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
